fix: remove --forceExit from npm test to fix verify.sh exit code
- Jest's --forceExit flag caused exit code 1 even when all tests passed
- Removed --forceExit from test and test:coverage scripts
- Removed debug logging from ship command and VerifyService
- verify.sh now exits with code 0 when tests pass

--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test": "jest --forceExit",
+    "test": "jest",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage --forceExit",
+    "test:coverage": "jest --coverage",
     "dev": "ts-node src/index.ts",
     "lint": "eslint src tests --ext .ts",
     "clean": "rm -rf dist",
