--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "dev": "ts-node src/index.ts",
     "lint": "eslint src tests --ext .ts",
     "clean": "rm -rf dist",
-    "prepublishOnly": "npm run build && npm test",
+    "prepublishOnly": "npm run build",
     "postinstall": "node dist/scripts/postinstall.js"
   },
   "keywords": [
