fix: add --access public flag for scoped package publishing
Scoped packages (@littlebearapps/*) are private by default. When using
--provenance flag, npm requires explicit --access public for new or
private packages to generate provenance attestation.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -70,7 +70,7 @@ jobs:
             TAG="${{ steps.tag-manual.outputs.tag }}"
           fi
           echo "Publishing with dist-tag: $TAG"
-          npm publish --tag $TAG --provenance
+          npm publish --tag $TAG --provenance --access public
         # OIDC authentication - no token needed!
         # npm will automatically use OIDC when NODE_AUTH_TOKEN is not provided
 
