fix: remove registry-url to enable OIDC authentication
The registry-url parameter in setup-node automatically creates NODE_AUTH_TOKEN
environment variable, which prevents OIDC authentication from working. When
NODE_AUTH_TOKEN is present, npm uses token-based auth instead of OIDC.

For OIDC to work, NODE_AUTH_TOKEN must not be set. npm will automatically
detect OIDC availability via the id-token: write permission and use it
for authentication when publishing.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,7 +31,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          registry-url: 'https://registry.npmjs.org'
+          # Note: registry-url is intentionally omitted to allow OIDC authentication
+          # Setting registry-url would create NODE_AUTH_TOKEN which prevents OIDC
 
       - name: Install dependencies
         run: npm install --ignore-scripts
