--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,4 +1,4 @@
-name: CodeQL Security Analysis
+name: CodeQL
 
 on:
   push:
@@ -9,54 +9,56 @@ on:
     # Weekly scan on Mondays at 9:00 AM UTC
     - cron: '0 9 * * 1'
 
+permissions:
+  contents: read
+
 jobs:
   analyze:
-    name: Analyze Code Security
+    name: Analyze (${{ matrix.language }})
     runs-on: ubuntu-latest
-    timeout-minutes: 15
+    timeout-minutes: 360
 
     permissions:
-      actions: read
-      contents: read
+      # Required for all workflows
       security-events: write
+      # Required for workflows in private repos
+      contents: read
+      actions: read
 
     strategy:
       fail-fast: false
       matrix:
-        language: [ 'javascript' ]
+        # CodeQL supports: javascript, typescript, python, java, cpp, csharp, go, ruby
+        language: [ 'javascript-typescript' ]
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
           languages: ${{ matrix.language }}
-          # Use security-extended query suite for comprehensive coverage
-          queries: security-extended
-          # Solo dev optimization: auto-dismiss stale alerts
-          config: |
-            paths-ignore:
-              - node_modules
-              - dist
-              - coverage
-              - '**/*.test.ts'
-              - '**/*.spec.ts'
+          # Query suite options:
+          # - security-extended: More queries, more false positives
+          # - security-and-quality: Balance of security + code quality (recommended)
+          # - security-only: Minimal false positives
+          queries: security-and-quality
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build project
-        run: npm run build
+      # Autobuild attempts to build any compiled languages (C/C++, C#, Go, Java, Swift)
+      # For JavaScript/TypeScript, this step can often be skipped
+      - name: Autobuild
+        uses: github/codeql-action/autobuild@v3
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
         with:
-          category: "/language:${{matrix.language}}"
+          category: "/language:${{ matrix.language }}"
+          # Upload results even if some queries fail
+          upload: true
+
+      - name: Check for critical findings
+        if: always()
+        run: |
+          echo "CodeQL analysis complete"
+          echo "Review results in Security → Code scanning alerts"
